fixed some mobile stuff. The spacing is a bit odd in places.

--- a/styles.sass
+++ b/styles.sass
@@ -148,6 +148,7 @@ header
     justify-content: center
     width: 100%
     height: 100vh
+    margin-bottom: 50px
     span
         position: absolute
         top: 40%
@@ -824,7 +825,7 @@ footer
         ul
             margin-top: 200px       
     section
-        margin-top: 400px
+        //margin-top: 400px
             
 // For laptops
 
@@ -903,6 +904,7 @@ footer
         
 @media only screen and (max-width: 1024px) and (min-height: 600px)
     header
+        margin-bottom: 50px
         ul
             margin-top: 70px
         .visualdesign
@@ -932,7 +934,7 @@ footer
             margin-top: 0px
 
     section
-        margin-top: 100px
+        margin-top: 0px
         .lbox
             display: block
             width: 80%
@@ -990,7 +992,7 @@ footer
             margin-right: auto
             font-size: 10pt
     section
-        margin-bottom: 50px
+        margin-bottom: 0px
         .lbox
             display: block
             width: 80%
@@ -1166,7 +1168,7 @@ footer
             font-size: 12px
             font-family: Helvetica Light, Arial
     section
-        margin-top: 50px
+        margin-top: 0px
         .aboutheader
             height: 175px
         margin-bottom: 50px
